<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestNav">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_marginEnd="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_nav_desc"
            android:textAlignment="center" />

        <Button
            android:id="@+id/mainActivityNavbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainActivityNavigationBtn" />

        <Button
            android:id="@+id/loginActivitybtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login Activity" />
        <Button
            android:id="@+id/reservationActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_debug_btn" />

        <Button
            android:id="@+id/reservationHistoryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_history_btn" />

        <Button
            android:id="@+id/viewReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_reservation_btn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>