<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:id="@+id/titleLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/titleTxtOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/logo_first_half"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/titleTxtTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/titleTxtOne"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/logo_second_half"
            android:textColor="@color/primary"
            android:textSize="32dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLL"
        android:layout_marginVertical="40dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/train_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLL"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textSize="32dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/username_field_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password_field_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPasswordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="end"
            android:text="@string/forgot_password_text"
            android:textColor="@color/primary"
            android:textSize="14dp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_button"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/loginLL"
        android:layout_marginBottom="20dp"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/registerQuestionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingRight="4dp"
            android:text="@string/do_not_have_an_account_text"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/registerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/register"
            android:textColor="@color/primary"
            android:textSize="14dp" />
    </LinearLayout>
</RelativeLayout>
