<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:id="@+id/registerLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/registerTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/menu_item_three"
                    android:textAlignment="center"
                    android:textSize="16dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nicTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/nicET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/nic_field_hint"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fullNameTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/fullNameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/name_field_hint"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/email_field_hint"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneTIL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/phoneET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/phone_number_field_hint"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/updateProfileBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/primary"
                    android:text="@string/edit_profile_button"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:cornerRadius="8dp"
                    app:rippleColor="#33AAAAAA" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/cancel_button"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:visibility="gone"
                    app:cornerRadius="8dp"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/other_settings_text"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logOutBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/logout_button"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    app:cornerRadius="8dp"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/updatePasswordBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/change_password_button"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    app:cornerRadius="8dp"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="1dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deactivateAccountBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/danger"
                    android:text="@string/deactivate_account_button"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:cornerRadius="8dp"
                    app:rippleColor="#33AAAAAA" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>