<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="306dp"
        android:layout_height="295dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reserve_back" />

    <TextView
        android:id="@+id/welcomeback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/reserve_screen_title"
        android:textSize="92px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reservationUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_username"
        android:textColor="@color/primary"
        android:textSize="92px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/welcomeback"
        app:layout_constraintTop_toBottomOf="@+id/welcomeback" />

    <LinearLayout
        android:layout_width="0dp"
        android:backgroundTint="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="70dp"
        android:paddingBottom="70dp"
        android:paddingHorizontal="20dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/reservationUserName">

        <TextView
            android:id="@+id/textView4"
            android:paddingLeft="5dp"
            android:textSize="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/departure_station_label" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Spinner
            android:id="@+id/departure_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView5"
            android:paddingLeft="5dp"
            android:textSize="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrival_station_label" />

        <Spinner
            android:id="@+id/arivalSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView6"
            android:paddingLeft="5dp"
            android:textSize="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/departure_date_time" />

        <Spinner
            android:id="@+id/departure_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reserve_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="#21CD9C"
                android:text="@string/reserve_btn" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>